[tool.poetry]
name = "crypto"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.0"
pandas = "^2.0.2"
scikit-learn = "^1.2.2"
matplotlib = "^3.7.1"
tqdm = "^4.65.0"
seaborn = "^0.12.2"
gym = "^0.26.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
